# endorphin

./: .gitignore  Cargo.toml  README.md  architecture.drawio  config.toml  start_remote_adb_server.sh
android-emulator/: adb_guide.md  emulator_guide.md
endorphin-client/: Cargo.toml
endorphin-client/src/: connection.rs  lib.rs  main.rs  ui.rs
endorphin-common/: Cargo.toml
endorphin-common/src/: adb.rs  buffer.rs  config.rs  error.rs  filter.rs  lib.rs  logcat.rs  logging.rs  monitoring.rs  network.rs  optimization.rs  performance.rs  security.rs  types.rs
endorphin-server/: Cargo.toml
endorphin-server/src/: bridge.rs  emulator.rs  lib.rs  main.rs  stream_manager.rs
tests/: Cargo.toml  README.md  end_to_end_tests.rs  integration_tests.rs  main.rs  test_config.toml  test_runner.rs
