[package]
name = "endorphin-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "endorphin-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }
endorphin-common = { path = "../endorphin-common" }

[dev-dependencies]
proptest = { workspace = true }
quickcheck = { workspace = true }